Replacing boolean constrcutor with Boolean.valueOf to save memory